<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/icon_main"
        android:layout_width="800dp"
        android:layout_height="600dp"

        android:contentDescription="@string/bg_triangle"
        android:foreground="@drawable/ic_geeks_gradient"
        android:src="@drawable/bg_triangle_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"

        app:tint="@color/light_green" />


    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/alpha_light"
        app:layout_constraintTop_toBottomOf="@id/login_text" />


    <ImageView
        android:id="@+id/geeks_icon"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:contentDescription="@string/geeks_icon"
        android:src="@drawable/ic_geeks"

        app:layout_constraintBottom_toBottomOf="@+id/icon_main"
        app:layout_constraintEnd_toEndOf="@+id/icon_main"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/icon_main"
        app:layout_constraintTop_toTopOf="@+id/icon_main"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/geeks_text"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/geeks_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/geeks_icon"
        app:layout_constraintStart_toStartOf="@+id/geeks_icon"
        app:layout_constraintTop_toBottomOf="@+id/geeks_icon"


        />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/array_down"
        android:src="@drawable/down_arrow"

        app:layout_constraintBottom_toBottomOf="@id/icon_main"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon_main"

        app:layout_constraintVertical_bias="0.73"


        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <Button

            android:id="@+id/facebook_button"
            style="@style/Widget.Material3.Button.IconButton.Outlined"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"

            android:backgroundTint="@android:color/transparent"
            android:paddingVertical="10dp"
            android:text="@string/log_in_facebook"

            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:contentDescription="@string/facebook_icon"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@id/facebook_button"
            app:layout_constraintEnd_toEndOf="@+id/facebook_button"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@id/facebook_button"
            app:layout_constraintTop_toTopOf="@id/facebook_button"

            />


        <View
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@id/or_text"
            app:layout_constraintTop_toBottomOf="@id/facebook_button"

            />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:text="@string/or"

            app:layout_constraintEnd_toEndOf="@id/facebook_button"
            app:layout_constraintStart_toStartOf="@id/facebook_button"
            app:layout_constraintTop_toBottomOf="@id/facebook_button"

            />

        <View
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toEndOf="@id/or_text"
            app:layout_constraintTop_toBottomOf="@id/facebook_button" />


        <Button
            android:id="@+id/email_button"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/up_with_email"

            android:textColor="@color/black"
            android:textSize="18sp"

            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/blue"

        android:paddingVertical="15dp"
        android:text="@string/game_now"

        android:textSize="22sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"

        />


</androidx.constraintlayout.widget.ConstraintLayout>