<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/light_green"


    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="-8dp"


        android:background="@android:color/transparent"
        android:src="@drawable/left_arrow"


        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/register_text"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/alpha_light"
        app:layout_constraintTop_toBottomOf="@id/register_text" />


    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_username"

        android:hint="@string/username"

        android:textSize="20sp"
        android:padding="18dp"


        android:textColor="@color/white"
        android:textColorHint="@color/white"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="3dp"

        android:background="@drawable/edit_text_email"


        android:hint="@string/email"

        android:textSize="20sp"
        android:padding="18dp"


        android:textColor="@color/white"
        android:textColorHint="@color/white"


        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="3dp"

        android:background="@drawable/edit_text_password"


        android:hint="@string/passwrod"

        android:textSize="20sp"
        android:padding="18dp"


        android:textColor="@color/white"
        android:textColorHint="@color/white"


        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/next"

        android:textAllCaps="true"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.4"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        android:src="@drawable/bg_register_gradient"
        />


</androidx.constraintlayout.widget.ConstraintLayout>